--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,8 @@
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     overflow: hidden;
+    background: rgb(255, 255, 255);
     background-image: url('../assets/background-picture.jpg');
     background-size: cover;
     background-position: center;
@@ -45,7 +45,6 @@ nav a:hover {
 }
 
 .content {
-    font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
